--- a/style.css
+++ b/style.css
@@ -6,9 +6,15 @@
 body,
 html {
     height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #myCanvas {
     cursor: crosshair;
     position: fixed;
+}
+
+#clear {
+    position: absolute;
+    padding: 2px;
 }
